@@ -29,6 +29,7 @@
 /rets/getMetadata\?Format\=COMPACT\&ID\=Property\:ResidentialProperty\&Type\=METADATA-TABLE = metadata-table.9
 /rets/getMetadata\?Format\=COMPACT\&ID\=Property\:VEW\&Type\=METADATA-LOOKUP_TYPE = metadata-lookup-type.10
 /rets/getObject\?ID\=LN000001\:*\&Location\=0\&Resource\=Property\&Type\=Photo = photo.1
+/rets/getObject\?ID\=LN000001\:*\&Location\=1\&Resource\=Property\&Type\=Photo = photo.2
 /rets/login = login
 /rets/logout = logout
 /rets/search\?Class\=ResidentialProperty\&Count\=1\&Format\=COMPACT-DECODED\&Query\=\(ListPrice%3d300000-\)\&QueryType\=DMQL2\&SearchType\=Property\&Select\=ListingID,ListPrice,Beds,City&StandardNames\=1 = search.1
