@@ -1,0 +1,146 @@
+HTTP/1.1 200 OK
+Cache-Control: no-cache="set-cookie"
+Date: Sat, 18 Jul 2009 14:18:02 GMT
+Transfer-Encoding: chunked
+Content-Type: multipart/parallel;boundary="simple boundary"
+Set-Cookie: RETS-Session-ID=95082881028
+RETS-Version: RETS/1.5
+X-Powered-By: Servlet/2.4 JSP/2.0
+MIME-Version: 1.0
+
+00fe
+--simple boundary
+Content-Type: text/xml
+Content-Length: 59
+Content-ID: 90022683104
+Object-ID: 1
+Location: http://csmedia.mris.com/platinum/getmedia?ID=90022689871&amp;LOOT=50045650620
+
+<RETS ReplyCode="0" ReplyText="V2.4.3 625: Success"></RETS>
+
+00fe
+--simple boundary
+Content-Type: text/xml
+Content-Length: 59
+Content-ID: 90022683104
+Object-ID: 2
+Location: http://csmedia.mris.com/platinum/getmedia?ID=90022689938&amp;LOOT=50045650620
+
+<RETS ReplyCode="0" ReplyText="V2.4.3 625: Success"></RETS>
+
+00fe
+--simple boundary
+Content-Type: text/xml
+Content-Length: 59
+Content-ID: 90022683104
+Object-ID: 3
+Location: http://csmedia.mris.com/platinum/getmedia?ID=90022689800&amp;LOOT=50045650620
+
+<RETS ReplyCode="0" ReplyText="V2.4.3 625: Success"></RETS>
+
+00fe
+--simple boundary
+Content-Type: text/xml
+Content-Length: 59
+Content-ID: 90022683104
+Object-ID: 4
+Location: http://csmedia.mris.com/platinum/getmedia?ID=90022689939&amp;LOOT=50045650620
+
+<RETS ReplyCode="0" ReplyText="V2.4.3 625: Success"></RETS>
+
+00fe
+--simple boundary
+Content-Type: text/xml
+Content-Length: 59
+Content-ID: 90022683104
+Object-ID: 5
+Location: http://csmedia.mris.com/platinum/getmedia?ID=90022689957&amp;LOOT=50045650620
+
+<RETS ReplyCode="0" ReplyText="V2.4.3 625: Success"></RETS>
+
+00fe
+--simple boundary
+Content-Type: text/xml
+Content-Length: 59
+Content-ID: 90022683104
+Object-ID: 6
+Location: http://csmedia.mris.com/platinum/getmedia?ID=90022689994&amp;LOOT=50045650620
+
+<RETS ReplyCode="0" ReplyText="V2.4.3 625: Success"></RETS>
+
+00fe
+--simple boundary
+Content-Type: text/xml
+Content-Length: 59
+Content-ID: 90022683104
+Object-ID: 7
+Location: http://csmedia.mris.com/platinum/getmedia?ID=90022690015&amp;LOOT=50045650620
+
+<RETS ReplyCode="0" ReplyText="V2.4.3 625: Success"></RETS>
+
+00fe
+--simple boundary
+Content-Type: text/xml
+Content-Length: 59
+Content-ID: 90022683104
+Object-ID: 8
+Location: http://csmedia.mris.com/platinum/getmedia?ID=90022690206&amp;LOOT=50045650620
+
+<RETS ReplyCode="0" ReplyText="V2.4.3 625: Success"></RETS>
+
+00fe
+--simple boundary
+Content-Type: text/xml
+Content-Length: 59
+Content-ID: 90022683104
+Object-ID: 9
+Location: http://csmedia.mris.com/platinum/getmedia?ID=90022690018&amp;LOOT=50045650620
+
+<RETS ReplyCode="0" ReplyText="V2.4.3 625: Success"></RETS>
+
+00ff
+--simple boundary
+Content-Type: text/xml
+Content-Length: 59
+Content-ID: 90022683104
+Object-ID: 10
+Location: http://csmedia.mris.com/platinum/getmedia?ID=90022689894&amp;LOOT=50045650620
+
+<RETS ReplyCode="0" ReplyText="V2.4.3 625: Success"></RETS>
+
+00ff
+--simple boundary
+Content-Type: text/xml
+Content-Length: 59
+Content-ID: 90022683104
+Object-ID: 11
+Location: http://csmedia.mris.com/platinum/getmedia?ID=90022689933&amp;LOOT=50045650620
+
+<RETS ReplyCode="0" ReplyText="V2.4.3 625: Success"></RETS>
+
+00ff
+--simple boundary
+Content-Type: text/xml
+Content-Length: 59
+Content-ID: 90022683104
+Object-ID: 12
+Location: http://csmedia.mris.com/platinum/getmedia?ID=90022690084&amp;LOOT=50045650620
+
+<RETS ReplyCode="0" ReplyText="V2.4.3 625: Success"></RETS>
+
+00ff
+--simple boundary
+Content-Type: text/xml
+Content-Length: 59
+Content-ID: 90022683104
+Object-ID: 13
+Location: http://csmedia.mris.com/platinum/getmedia?ID=90022689937&amp;LOOT=50045650620
+
+<RETS ReplyCode="0" ReplyText="V2.4.3 625: Success"></RETS>
+
+0017
+--simple boundary--
+
+
+0000
+
