@@ -1,4 +1,7 @@
 Version 1.3.4 - xx xxx 2009
+
+  * Handle malformed multi-part response if enabled.
+    Ticket #112.
   
 Version 1.3.3 - 15 Jul 2009
   
